--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "dom": "^0.0.3",
     "file-saver": "^2.0.5",
     "input-format": "^0.3.10",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.2",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
